--- a/kr/assets/css/main.css
+++ b/kr/assets/css/main.css
@@ -13,6 +13,21 @@ body {
   color:black;
 } */
 
+.font-family-cn {
+  font-family: initial;
+  /* font-family: "Noto Sans", sans-serif; */
+}
+
+.font-family-jp {
+  font-family: initial;
+  /* font-family: "Noto Sans", sans-serif; */
+}
+
+.font-family-kr {
+  font-family: initial;
+  /* font-family: "Noto Sans", sans-serif; */
+}
+
 .footer-message {
   opacity: 0.85;
 }
